--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,7 +1,9 @@
-Name: Keep Render Alive
+name: Keep Render Alive
+
 on:
   schedule:
-    - cron: "*/5 * * * *" # Runs every 15 minutes
+    - cron: '*/5 * * * *'  # Every hour
+  workflow_dispatch:
 
 jobs:
   ping_url:
