--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,16 +1,15 @@
-name: Keep Render Alive
+# Simulated daily request to your render project so that the service doesn't go down
+name: Daily render ping
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every hour
-  workflow_dispatch:
+    - cron: '*/5 * * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  ping_url:
+  curl-website:
     runs-on: ubuntu-latest
-    name: Ping URL
+
     steps:
-      - name: Ping the URL
-        uses: soul-wish/ping-url-javascript-action@v1.5
-        with:
-          url: "https://radio-infu.onrender.com"
+      - name: Run cURL on Website
+        run: curl -I https://radio-infu.onrender.com
