--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -12,4 +12,4 @@ jobs:
 
     steps:
       - name: Run cURL on Website
-        run: curl -I https://radio-infu.onrender.com
+        run: curl -I https://ugh-ht9h.onrender.com
